Change header text

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: johnhall.io - programming, cars, etc.
+title: personal blog of john hall
 email: john@johnhall.io
 description: "The personal blog of John Hall - Programmer, Car Enthusiast, Musician, Vermonter."
 logo_location: "/assets/img/logo.png"
